=== 7.x-0.2 === New: Make #admin-menu wrapper nicely transparent when in hidden state.

--- a/admin_menu_toggle.css
+++ b/admin_menu_toggle.css
@@ -7,3 +7,9 @@
 #admin-menu-toggle:hover {
   cursor: pointer;
 }
+
+#admin-menu.admin-menu-transparent,
+body.adminimal-menu div#admin-menu.admin-menu-transparent {
+  background-color: transparent;
+  border: none;
+}
