=== 7.x-0.5 === Mod: Better style structure.

--- a/admin_menu_toggle.css
+++ b/admin_menu_toggle.css
@@ -1,15 +1,24 @@
 #admin-menu-toggle {
   color: white;
+  background-color: black;
   float: left;
   padding: 5px;
+}
+
+#admin-menu.admin-menu-compress #admin-menu-toggle:before {
+  content: ">>";
+}
+
+#admin-menu:not(.admin-menu-compress) #admin-menu-toggle:before {
+  content: "<<";
 }
 
 #admin-menu-toggle:hover {
   cursor: pointer;
 }
 
-#admin-menu.admin-menu-transparent,
-body.adminimal-menu div#admin-menu.admin-menu-transparent {
+#admin-menu.admin-menu-compress,
+body.adminimal-menu div#admin-menu.admin-menu-compress {
   background-color: transparent;
   border: none;
 }
